name:                notsureyet
version:             0.1.0.0
synopsis:            Not sure yet.
description:         Please see README.md
homepage:            https://github.com/PiotrJustyna/notsureyet#readme
license:             BSD3
license-file:        LICENSE
author:              Piotr Justyna
maintainer:          piotr.justyna@gmail.com
copyright:           2016 Piotr Justyna
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Constants
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable notsureyet-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , notsureyet
                     , network-simple
                     , bytestring
  default-language:    Haskell2010

test-suite notsureyet-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , notsureyet
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/PiotrJustyna/notsureyet
